--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://use.fortawesome.com/f6c445bf.js"></script>
     <link rel="stylesheet" href="/style/style.css">
   </head>
   <body>
